# altirraqt

./: .gitignore  AUTHORS  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  altirraqt.flatpakrepo  flake.nix  index.html
.claude/: check-plan.sh
.github/workflows/: build.yml
data/applications/: altirraqt.desktop
data/man/: altirraqt.1
data/metainfo/: com.virtualdub.altirraqt.metainfo.xml
packaging/flatpak/: com.virtualdub.altirraqt.yml
packaging/windows/: altirraqt.nsi
repo/: summary  summary.idx
repo/refs/heads/app/com.virtualdub.altirraqt/x86_64/: master
repo/refs/heads/runtime/com.virtualdub.altirraqt.Debug/x86_64/: master
repo/summaries/: b53abce89dcb667b320cd92de970ccb04ae22f7ce57a6948c481c4c1cf7468b0-f7bc572fd9d2e416cc3150b5a3dc1e1c8ffb5229ebea1e32755693bf0f75c350.delta
src/: CMakeLists.txt
src/ATAppBase/: CMakeLists.txt
src/ATAudio/: CMakeLists.txt
src/ATAudio/source/: audiooutnull.cpp  audiooutput.cpp  audiooutqt.cpp  pokeysavestate.cpp
src/ATBasic/: CMakeLists.txt
src/ATCPU/: CMakeLists.txt
src/ATCore/: CMakeLists.txt
src/ATCore/source/: checksum_arm64.cpp  checksum_intrin.cpp  configvar.cpp  consoleoutput.cpp  decmath.cpp  deferredevent.cpp  fft.cpp  fft_avx2.cpp  fft_sse2.cpp  propertyset.cpp
src/ATDebugger/: CMakeLists.txt
src/ATDevices/: CMakeLists.txt
src/ATDevices/source/: videogenerator.cpp
src/ATEmulation/: CMakeLists.txt
src/ATEmulation/h/: stdafx.h
src/ATIO/: CMakeLists.txt
src/ATIO/h/at/atio/: cassetteaudiofilters.h  vorbisdecoder.h  vorbismisc.h
src/ATIO/source/: audioreader.cpp  audioreaderflac.cpp  audioreaderflac_x86.cpp  audioutils.cpp  cassetteaudiofilters.cpp  cassetteblock.cpp  vorbisbitreader.cpp  vorbismisc.cpp
src/ATNetwork/: CMakeLists.txt
src/ATNetworkSockets/: CMakeLists.txt
src/ATNetworkSockets/h/: stdafx.h
src/ATNetworkSockets/source/: nativesockets_stub.cpp
src/ATVM/: CMakeLists.txt
src/Altirra/: CMakeLists.txt
src/Altirra/h/: antic_sse2.inl  gtia.h  gtia_sse2_intrin.inl  gtiarenderer_neon.inl  gtiarenderer_ssse3_intrin.inl  simulator.h  stdafx.h  tracefileencoding.h
src/Altirra/source/: allocator.cpp  artifacting.cpp  artifacting_ntsc_neon.cpp  artifacting_ntsc_sse2_intrin.cpp  artifacting_pal_neon.cpp  artifacting_pal_sse2_intrin.cpp  artifacting_sse2_intrin.cpp  console.cpp  cpu.cpp  disk.cpp  gtia.cpp  joystick.cpp  leakdetector.cpp  main.cpp  printeroutput.cpp  profilerui.cpp  rtime8.cpp  savestatetypes.cpp  simulator.cpp  siomanager.cpp  tracefileformat.cpp  vbxestate.cpp
src/Dita/: CMakeLists.txt
src/Dita/h/: stdafx.h
src/Dita/source/: accel_qt.cpp  services_qt.cpp
src/Kasumi/: CMakeLists.txt
src/Kasumi/source/: blt.cpp  region_sse2.cpp  resample_stages_arm64.cpp  resample_stages_x64.cpp  resample_stages_x64_stubs.cpp  uberblit_ycbcr_sse2_intrin.cpp
src/Kernel/: CMakeLists.txt
src/Kernel/source/: main.lst
src/QtDisplay/: CMakeLists.txt
src/QtDisplay/h/at/qtdisplay/: qtvideodisplay.h
src/QtDisplay/source/: qtvideodisplay.cpp
src/QtOSHelper/: CMakeLists.txt  altirra_roms.qrc.in
src/QtOSHelper/source/: oshelper.cpp
src/Riza/: CMakeLists.txt
src/Tessa/: CMakeLists.txt
src/Tessa/h/: stdafx.h
src/Tessa/source/: Context.cpp
src/VDDisplay/: CMakeLists.txt
src/VDDisplay/h/: displaynode3d.h  stdafx.h
src/VDDisplay/h/vd2/VDDisplay/internal/: customeffectutils.h  customeffectutilsd3d.h
src/VDDisplay/source/: options.cpp  renderersoft.cpp
src/altirraqt/: CMakeLists.txt  adjustcolorsdialog.cpp  adjustcolorsdialog.h  advancedconfigdialog.cpp  advancedconfigdialog.h  altirraqt.qrc  altvideodialog.cpp  altvideodialog.h  audiolevelsdialog.cpp  audiolevelsdialog.h  audiorecorder.cpp  audiorecorder.h  calibratedialog.cpp  calibratedialog.h  cheaterdialog.cpp  cheaterdialog.h  compat_qt.cpp  compat_qt.h  compatdatabasedialog.cpp  compatdatabasedialog.h  configsystemdialog.cpp  configsystemdialog.h  customizehuddialog.cpp  customizehuddialog.h  debug_win32_stub.cpp  debuggerbreakpointspane.cpp  debuggerbreakpointspane.h  debuggerconsolepane.cpp  debuggerconsolepane.h  debuggerdisassemblypane.cpp  debuggerdisassemblypane.h  debuggerhistorypane.cpp  debuggerhistorypane.h  debuggermemorypane.cpp  debuggermemorypane.h  debuggerregisterspane.cpp  debuggerregisterspane.h  debuggersourcepane.cpp  debuggersourcepane.h  debuggerwatchpane.cpp  (+46 more)
src/h/at/ataudio/: audioout.h
src/h/at/atcore/: intrin_neon.h  intrin_sse2.h
src/h/at/atnativeui/: debug_win32.h  uiframe.h
src/h/at/attest/: test.h
src/h/vd2/system/: binary.h  bitmath.h  date.h  error.h  file.h  fraction.h  function.h  int128.h  linearalloc.h  math.h  seh.h  strutil.h  thread.h  time.h  vdstdc.h  vdstl_algorithm.h  vdstl_fastvector.h  vdtypes.h  zip.h
src/h/vd2/system/win32/: intrin.h
src/system/: CMakeLists.txt
src/system/h/: stdafx.h
src/system/source/: cpuaccel.cpp  date.cpp  debug.cpp  error.cpp  error_qt.cpp  error_win32.cpp  file.cpp  fileasync.cpp  filestream.cpp  filesys.cpp  int128.cpp  memory.cpp  process.cpp  registry.cpp  text.cpp  thread.cpp  time.cpp  vdstl_hashtable.cpp  zip.cpp
src/vdjson/: CMakeLists.txt
tests/: README.md  all.sh  audio.sh  baseline-soak.txt  devices.sh  soak.sh
tools/: build-appimage.sh  build-flatpak.sh  build-roms.sh  release.sh
