add_subdirectory(system)
add_subdirectory(ATAppBase)
add_subdirectory(ATCore)
add_subdirectory(ATCPU)
add_subdirectory(ATIO)
add_subdirectory(ATAudio)
add_subdirectory(ATEmulation)
add_subdirectory(vdjson)
add_subdirectory(Kasumi)
add_subdirectory(Riza)
add_subdirectory(Tessa)
add_subdirectory(VDDisplay)
add_subdirectory(QtDisplay)
add_subdirectory(Altirra)
add_subdirectory(QtOSHelper)
add_subdirectory(Dita)
add_subdirectory(Kernel)
add_subdirectory(ATBasic)
add_subdirectory(altirraqt)
add_subdirectory(ATDebugger)
add_subdirectory(ATNetwork)
add_subdirectory(ATVM)
add_subdirectory(ATNetworkSockets)
add_subdirectory(ATDevices)
